<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register_activity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_weight="8"
                android:src="@drawable/ic_login"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="ContentDescription" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="58dp"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/ic_quiziaclogo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/peacemaker_personal_use_regular"
                android:text="@string/quiziac"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="Username"
                android:background="@drawable/rounded_corner"
                android:hint="@string/username"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#fff"
                android:textColorHint="#eee"
                android:textCursorDrawable="@null"
                android:textSize="17sp"
                tools:ignore="TextFields"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="Email"
                android:background="@drawable/rounded_corner"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#fff"
                android:textColorHint="#eee"
                android:textCursorDrawable="@null"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="Password"
                android:background="@drawable/rounded_corner"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#fff"
                android:textColorHint="#eee"
                android:textCursorDrawable="@null"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/cPassword"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="20dp"
                android:autofillHints="Confirm Password"
                android:background="@drawable/rounded_corner"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#fff"
                android:textColorHint="#eee"
                android:textCursorDrawable="@null"
                android:textSize="17sp" />

            <Button
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/rounded_corner_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/register"
                android:textColor="@color/regis_login"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/relogin"
                android:textColor="#0F0FAF"/>


        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>