<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login_activity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_weight="4"
                android:src="@drawable/ic_login"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="ContentDescription" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="58dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_quiziaclogo"
                android:layout_marginTop="35dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:text="@string/quiziac"
                android:fontFamily="@font/peacemaker_personal_use_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="20dp"
                android:autofillHints="Email"
                android:background="@drawable/rounded_corner"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#fff"
                android:textColorHint="#eee"
                android:textCursorDrawable="@null"
                android:textSize="17sp"
                 />
            <EditText
                android:id="@+id/password"
                android:textColor="#fff"
                android:textCursorDrawable="@null"
                android:textColorHint="#eee"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/rounded_corner"
                android:textSize="17sp"
                android:autofillHints="Password" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/rounded_corner_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/regis_login"
                android:textStyle="bold"
                android:text="@string/sign_in" />

            <TextView
                android:id="@+id/forgetPass"
                android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/don_t_have_account_sign_up"
                android:textColor="#0F0FAF"/>

            <!--            <LinearLayout-->
            <!--                android:layout_width="167dp"-->
            <!--                android:layout_height="wrap_content">-->

            <!--                <ImageButton-->
            <!--                    android:layout_width="40dp"-->
            <!--                    android:layout_height="40dp"-->
            <!--                    android:layout_marginStart="15dp"-->
            <!--                    android:background="@drawable/google"-->
            <!--                    tools:ignore="ContentDescription" />-->

            <!--                <ImageButton-->
            <!--                    android:layout_width="40dp"-->
            <!--                    android:layout_height="40dp"-->
            <!--                    android:layout_marginStart="15dp"-->
            <!--                    android:background="@drawable/facebook_box"-->
            <!--                    tools:ignore="ContentDescription" />-->

            <!--                <ImageButton-->
            <!--                    android:layout_width="40dp"-->
            <!--                    android:layout_height="40dp"-->
            <!--                    android:background="@drawable/twitter"-->
            <!--                    tools:ignore="ContentDescription" />-->
            <!--            </LinearLayout>-->


        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>